[package]
name = "rsa-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nubisvela/rsa-wasm"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 's'

[dependencies]
wasm-bindgen = { version = "0.2.100", default-features = false }
rsa = { version = "0.9.8", default-features = false, features = [
    "getrandom",
    "sha2",
] }
getrandom = { version = "0.2.16", default-features = false, features = ["js"] }
rand = { version = "0.8.5" }
console_error_panic_hook = { version = "0.1.7" }
