[package]
name = "rsa-wasm"
version = "0.1.0"
edition = "2024"

authors = ["mixhuang <mixhuang@outlook.com>"]
repository = "https://github.com/nubisvela/rsa-wasm"
license = "MIT"
keywords = ["rsa", "wasm"]
description = "This RSA WebAssembly, built with the Rust rsa crate, enables RSA functionality in JavaScript/TypeScript."

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 's'

[dependencies]
wasm-bindgen = { version = "0.2.100", default-features = false }
rsa = { version = "0.9.8", default-features = false, features = [
    "getrandom",
    "sha2",
    "pem",
] }
getrandom = { version = "0.2.16", default-features = false, features = ["js"] }
rand = { version = "0.8.5" }
console_error_panic_hook = { version = "0.1.7" }
